# sop-engine

./: .gitignore  CLAUDE.md  package-lock.json  package.json
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: agents.py  approvals.py  bindings.py  channels.py  executions.py  models.py  templates.py
backend/app/executors/: __init__.py  agent_executor.py  base.py  condition_executor.py  human_executor.py  registry.py  script_executor.py
backend/app/models/: __init__.py  agent.py  agent_config_file.py  base.py  binding.py  channel.py  commands_config.py  credential.py  execution.py  flow_template.py  messages_config.py  model_config.py  node_execution.py  session_config.py  template.py
backend/app/services/: __init__.py  agent_service.py  approval_service.py  binding_service.py  channel_service.py  context_manager.py  credential_service.py  event_bus.py  execution_service.py  flow_engine.py  model_service.py  openclaw_config_service.py  openclaw_sync.py  template_parser.py  template_service.py
backend/app/utils/: crypto.py
backend/tests/integration/: test_agent_sync.py  test_credential_sync.py
backend/tests/unit/: test_agent_api.py  test_agent_config_alignment.py  test_agent_service.py  test_approval_api.py  test_base_executor.py  test_binding_service.py  test_channel_service.py  test_config.py  test_context_manager.py  test_credential_service.py  test_crypto.py  test_event_bus.py  test_execution_api.py  test_flow_engine.py  test_human_executor.py  test_main.py  test_models.py  test_openclaw_config.py  test_script_executor.py  (+3 more)
(+103 files in other folders)
